--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Performance-Monitoring-System
-    </title>
+    <link rel="preload" href="/node_modules/@mdi/font/fonts/materialdesignicons-webfont.woff2?v=7.4.47" as="font" type="font/woff2" crossorigin="anonymous">
+
+    <meta http-equiv="Network-Error-Logging" content="false">
+    <title>Performance-Monitoring-System</title>
   </head>
   <body>
     <div id="app"></div>
